--- a/src/_styles/globals.css
+++ b/src/_styles/globals.css
@@ -11,3 +11,18 @@ html {
     background-color: #725536e0;
     font-family: 'Arial', 'Roboto';
 }
+
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari, and Opera */
+      .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+  
+      /* Hide scrollbar for IE, Edge, and Firefox */
+      .hide-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
+    }
+  }
