--- a/src/_styles/globals.css
+++ b/src/_styles/globals.css
@@ -7,9 +7,10 @@
     to {opacity: 1;}
 }
 
-html {
-    background-color: #725536e0;
-    font-family: 'Arial', 'Roboto';
+@layer components{
+  h1, h2, h3, h4, h5, h6, p {
+    @apply text-mocha-1000;
+  }
 }
 
 @layer utilities {
@@ -26,3 +27,12 @@ html {
       }
     }
   }
+
+html {
+    background-color: #725536e0;
+    font-family: 'Arial', 'Roboto';
+}
+
+.msg-wrapper {
+  white-space: pre-wrap;
+}
