Now able to update posts whenever I want lesggooooo

--- a/src/_styles/globals.css
+++ b/src/_styles/globals.css
@@ -21,3 +21,10 @@ html {
 .msg-wrapper {
   white-space: pre-wrap;
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}
