--- a/src/_styles/globals.css
+++ b/src/_styles/globals.css
@@ -3,8 +3,19 @@
 @tailwind utilities;
 
 @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
+    from {
+      opacity: 0;
+      transform: translateY(50%);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
 
 @layer components{
@@ -16,6 +27,14 @@
 html {
     background-color: #725536e0;
     font-family: 'Arial', 'Roboto';
+}
+
+.anim-fadeIn {
+  animation: fadeIn 1s ease-in-out;
+}
+
+.anim-fadeOut {
+  animation: fadeOut 1s ease-in-out;
 }
 
 .msg-wrapper {
