--- a/src/_styles/globals.css
+++ b/src/_styles/globals.css
@@ -2,22 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(50%);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-}
-
-@keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
 @layer components{
   h1, h2, h3, h4, h5, h6, p {
     @apply text-mocha-1000;
@@ -29,12 +13,14 @@ html {
     font-family: 'Arial', 'Roboto';
 }
 
-.anim-fadeIn {
-  animation: fadeIn 1s ease-in-out;
+html.is-changing .transition-fade {
+  transition: opacity 0.25s;
+  opacity: 1;
 }
 
-.anim-fadeOut {
-  animation: fadeOut 1s ease-in-out;
+/* Define the styles for the unloaded pages */
+html.is-animating .transition-fade {
+  opacity: 0;
 }
 
 .msg-wrapper {
